Horizontal scrolling in boxes fixed.

--- a/src/components/widgets/Box/Box.less
+++ b/src/components/widgets/Box/Box.less
@@ -1,9 +1,11 @@
 .limited {
   max-height: 600px;
+  overflow-x: auto;
   overflow-y: auto;
 }
 
 .unlimited {
+  overflow-x: auto;
   max-height: 100%;
 }
 
